--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "nanoid": "^3.1.23",
     "normalize.css": "^8.0.1",
     "vue": "^3.0.5"
   },
